fixed unclosed button tags, fixed letter-spacing

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -29,3 +29,7 @@ body {
     letter-spacing: 1px;
     font-weight: normal;
 }
+
+#page-wrapper {
+    letter-spacing: 0em;
+}
